fixed a z-index bug

--- a/css/demo.css
+++ b/css/demo.css
@@ -25,6 +25,7 @@ body {
   direction: rtl;
   background-color: #333;
   position: fixed;
+  z-index: 1000;
   top: 0;
   left: 0;
   right: 0;
